# pkg/protobuf/course_service.pb.validate.go
@@ -1,116 +1,0 @@
-// Code generated by protoc-gen-validate. DO NOT EDIT.
-// source: hobbyfarm/course_service.proto
-
-package protobuf
-
-import (
-	"bytes"
-	"errors"
-	"fmt"
-	"net"
-	"net/mail"
-	"net/url"
-	"regexp"
-	"strings"
-	"time"
-	"unicode/utf8"
-
-	"github.com/golang/protobuf/ptypes"
-)
-
-// ensure the imports are used
-var (
-	_ = bytes.MinRead
-	_ = errors.New("")
-	_ = fmt.Print
-	_ = utf8.UTFMax
-	_ = (*regexp.Regexp)(nil)
-	_ = (*strings.Reader)(nil)
-	_ = net.IPv4len
-	_ = time.Duration(0)
-	_ = (*url.URL)(nil)
-	_ = (*mail.Address)(nil)
-	_ = ptypes.DynamicAny{}
-)
-
-// define the regex for a UUID once up-front
-var _course_service_uuidPattern = regexp.MustCompile("^[0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{12}$")
-
-// Validate checks the field values on CourseList with the rules defined in the
-// proto definition for this message. If any rules are violated, an error is returned.
-func (m *CourseList) Validate() error {
-	if m == nil {
-		return nil
-	}
-
-	for idx, item := range m.GetCourses() {
-		_, _ = idx, item
-
-		if v, ok := interface{}(item).(interface{ Validate() error }); ok {
-			if err := v.Validate(); err != nil {
-				return CourseListValidationError{
-					field:  fmt.Sprintf("Courses[%v]", idx),
-					reason: "embedded message failed validation",
-					cause:  err,
-				}
-			}
-		}
-
-	}
-
-	return nil
-}
-
-// CourseListValidationError is the validation error returned by
-// CourseList.Validate if the designated constraints aren't met.
-type CourseListValidationError struct {
-	field  string
-	reason string
-	cause  error
-	key    bool
-}
-
-// Field function returns field value.
-func (e CourseListValidationError) Field() string { return e.field }
-
-// Reason function returns reason value.
-func (e CourseListValidationError) Reason() string { return e.reason }
-
-// Cause function returns cause value.
-func (e CourseListValidationError) Cause() error { return e.cause }
-
-// Key function returns key value.
-func (e CourseListValidationError) Key() bool { return e.key }
-
-// ErrorName returns error name.
-func (e CourseListValidationError) ErrorName() string { return "CourseListValidationError" }
-
-// Error satisfies the builtin error interface
-func (e CourseListValidationError) Error() string {
-	cause := ""
-	if e.cause != nil {
-		cause = fmt.Sprintf(" | caused by: %v", e.cause)
-	}
-
-	key := ""
-	if e.key {
-		key = "key for "
-	}
-
-	return fmt.Sprintf(
-		"invalid %sCourseList.%s: %s%s",
-		key,
-		e.field,
-		e.reason,
-		cause)
-}
-
-var _ error = CourseListValidationError{}
-
-var _ interface {
-	Field() string
-	Reason() string
-	Key() bool
-	Cause() error
-	ErrorName() string
-} = CourseListValidationError{}
